--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-essentials",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "gulp essentials tasks: saas, scripts, images, critical (critical css for php/html files)",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,13 +22,11 @@
     "gulp-rename": "latest",
     "gulp-replace": "^0.6.1",
     "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.1",
-    "lazypipe": "^1.0.1",
+    "gulp-sourcemaps": "^2.6.2",
     "run-sequence": "^2.2.0"
   },
   "dependencies": {
     "ansi-colors": "^1.0.1",
-    "cssnano": "^3.10.0",
     "fancy-log": "^1.3.2",
     "gulp-cache": "^1.0.1",
     "gulp-concat": "^2.6.1",
@@ -38,8 +36,6 @@
     "gulp-minify": "^2.1.0",
     "gulp-subtask": "^0.3.4",
     "mkdirp": "^0.5.1",
-    "promise": "^8.0.1",
-    "sync-request": "^4.1.0",
-    "url-exists": "^1.0.3"
+    "sync-request": "^4.1.0"
   }
 }
