--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-replace": "^0.6.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.2",
+    "gulp-strip-comments": "^2.5.2",
     "run-sequence": "^2.2.0"
   },
   "dependencies": {
