--- a/package.json
+++ b/package.json
@@ -1,42 +1,38 @@
 {
-  "name": "gulp-essentials",
-  "version": "1.1.1",
-  "description": "gulp essentials tasks: saas, scripts, images, critical (critical css for php/html files)",
+  "name": "bootstrap-4-starter-project",
+  "version": "1.0.0",
+  "description": "bootstrap4 starter project including gulp essentials tasks, best practices and full optimization",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gilles Migliori",
   "license": "ISC",
-  "url": "https://github.com/migliori/gulp-essentials/issues",
   "devDependencies": {
-    "autoprefixer": "^7.2.1",
-    "critical": "^1.1.0",
+    "autoprefixer": "^9.4.3",
+    "critical": "^1.3.4",
     "del": "^3.0.0",
     "gulp": "latest",
-    "gulp-clean-css": "latest",
     "gulp-cssnano": "latest",
-    "gulp-imagemin": "^4.0.0",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-postcss": "^7.0.0",
-    "gulp-remote-src": "^0.4.3",
+    "gulp-postcss": "^8.0.0",
     "gulp-rename": "latest",
-    "gulp-replace": "^0.6.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.2",
-    "gulp-strip-comments": "^2.5.2",
-    "run-sequence": "^2.2.0"
+    "gulp-replace": "^1.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-strip-comments": "^2.5.2"
   },
   "dependencies": {
-    "ansi-colors": "^1.0.1",
-    "fancy-log": "^1.3.2",
-    "gulp-cache": "^1.0.1",
+    "ansi-colors": "^3.2.3",
+    "bootstrap": "^4.1.3",
+    "fancy-log": "^1.3.3",
+    "gulp-cache": "^1.0.2",
+    "gulp-cli": "^2.0.1",
     "gulp-concat": "^2.6.1",
     "gulp-download": "0.0.1",
-    "gulp-if": "^2.0.2",
     "gulp-ignore": "^2.0.2",
-    "gulp-minify": "^2.1.0",
-    "gulp-subtask": "^0.3.4",
+    "gulp-minify": "^3.1.0",
     "mkdirp": "^0.5.1",
-    "sync-request": "^4.1.0"
+    "perfect-scrollbar": "^1.4.0",
+    "sync-request": "^6.0.0"
   }
 }
